@@ -9,8 +9,9 @@ sourceforge (2.5-33+) unstable; urgency=low
   * [Roland] Bumped Standards-Version to 3.5.7 and DH_COMPAT to 4.
   * [Otavio] Patch to fix user deletion (closes: #162793).
   * [Roland] Sort documentations by title.
+  * [Roland] Updated language codes in the database.
 
- -- Roland Mas <lolando@debian.org>  Thu, 17 Oct 2002 12:01:04 +0200
+ -- Roland Mas <lolando@debian.org>  Fri, 18 Oct 2002 19:11:07 +0200
 
 sourceforge (2.5-33) unstable; urgency=low
 
